# malloc

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  debug-strat-test.sh  debug-test.sh  debug.sh  run-test.bash  test.sh
docs/: .$diagram.drawio.bkp  diagram.drawio  mmap_test.c  program_memory_use_test.c
include/libft_malloc/: libft_malloc.h
src/: CMakeLists.txt  free_list_strategy.c  free_list_strategy.h  large_strategy.c  large_strategy.h  malloc.c  malloc_state.h  malloc_types.h  malloc_utils.c  malloc_utils.h  pool_strategy.c  pool_strategy.h  zone_manager.c  zone_manager.h
test/: CMakeLists.txt  free_list_strategy_test.c  large_strategy_test.c  malloc_test.c  malloc_test.h  pool_strategy_test.c  test.c
test/rand-test/: CMakeLists.txt  long-rand-test.py  rand-generator.py  rand-tester.c  run-test.sh
test/src/: main.c
test/strategy-test/: CMakeLists.txt  malloc_test.c  malloc_test.h  pool_strategy_test.c
test/strategy-test/free_list_strategy/: free_list_strategy_test.c  free_list_strategy_test_1.c  free_list_strategy_test_2.c  free_list_strategy_test_3.c  free_list_strategy_test_4.c  free_list_strategy_test_5.c  free_list_strategy_test_6.c  free_list_strategy_test_full_range.c
test/strategy-test/large_strategy/: large_strategy_test_1.c  large_strategy_test_2.c  large_strategy_test_3.c
test/strategy-test/mix_strategy/: mix_strategy_test_1.c  mix_strategy_test_2.c  mix_strategy_test_3.c
test/strategy-test/pool_strategy/: pool_strategy_chunk_test_1.c  pool_strategy_chunk_test_2.c  pool_strategy_init_test.c  pool_strategy_realloc_test_1.c  pool_strategy_test_1.c  pool_strategy_test_10.c  pool_strategy_test_2.c  pool_strategy_test_3.c  pool_strategy_test_4.c  pool_strategy_test_5.c  pool_strategy_test_6.c  pool_strategy_test_7.c  pool_strategy_test_8.c  pool_strategy_test_9.c  pool_strategy_zone_test_1.c
test/unit-test/: CMakeLists.txt
